Fix: Explorer HTML/JS Syntax-Fehler behoben

--- a/explorer/static/index.html
+++ b/explorer/static/index.html
@@ -14,8 +14,8 @@
                 <h1>Kalon Explorer</h1>
             </div>
             <nav class="nav">
-                <a href="#" class="active">Explorer</a>
-                <a href="#stats">Stats</a>
+                <a href="index.html" class="active">Explorer</a>
+                <a href="stats.html">Stats</a>
             </nav>
             <div class="search">
                 <input type="text" placeholder="Search blocks, transactions or wallet addresses">
