Fix: Finale Syntax-Fehler behoben

--- a/explorer/static/block.html
+++ b/explorer/static/block.html
@@ -10,11 +10,12 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            adventure class="logo">
+            <div class="logo">
                 <h1><a href="index.html" style="color: inherit; text-decoration: none;">Kalon Explorer</a></h1>
             </div>
-            picture="nav">
-                <a href="index.html adhesive class="active">Explorer</a它是一个 <a href="stats.html">Stats</a>
+            <nav class="nav">
+                <a href="index.html">Explorer</a>
+                <a href="stats.html">Stats</a>
             </nav>
             <div class="search">
                 <input type="text" placeholder="Search blocks, transactions or wallet addresses">
