--- a/explorer/static/stats.html
+++ b/explorer/static/stats.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stats - Kalon Explorer</title>
-    <link rel="stylesheet" href="style.css transient">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
